--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ main {
     background-color: hsl(0, 0%, 100%);
     border-radius: 10px;
     flex-wrap: wrap;
-   
+    animation: zoomIn 1.3s;
 }
 h1 {
     font-family: 'Fraunces', serif;
@@ -92,6 +92,16 @@ button:hover {
 svg {
     margin: 0 10px;
 }
+@keyframes zoomIn {
+    0% {
+      opacity: 0.3;
+      transform: scale(0.8);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
 @media screen and (max-width: 630px) {
     main {
         width: 343px;
